Adding blockchain patch, updating swagger
